# airbyte-interop-catalog

./: .cursorrules  .env.template  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  LICENSE  README.md  USAGE.md  poe.toml  poe_tasks.toml  poe_tasks_dbt.toml  pyproject.toml  pyrightconfig.json  pytest.ini  regenerate_facebook_marketing_sources.py  regenerate_hubspot_sources.py  ruff.toml  test-slash-commands.md
.data/: .gitignore  README.md
.devlog/: 2025-03-hubspot-streams.md  README.md
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: fix-command.yml  format.yml  generate-command.yml  lint.yml  lock-command.yml  poe-command.yml  publish.yml  release-drafter.yml  semantic-pr-check.yml  slash-command-dispatch.yml  slash-commands.yml  test-command.yml  test-fast.yml  test-matrix.yml
catalog/: README.md
catalog/amplitude/: README.md  rejected-mappings.md
catalog/amplitude/airbyte-interop-dbt-project/: dbt_project.yml
catalog/facebook_marketing/: README.md  fivetran-interop.morph-lock.toml  rejected-mappings.md
catalog/facebook_marketing/airbyte-interop-dbt-project/: dbt_project.yml
catalog/facebook_marketing/airbyte-source/: README.md
catalog/facebook_marketing/src/: morph-lock.toml
catalog/github/: README.md  rejected-mappings.md
catalog/github/airbyte-interop-dbt-project/: dbt_project.yml
catalog/hubspot/: README.md  fivetran-interop.morph-lock.toml  rejected-mappings.md  sources.yml
catalog/hubspot/airbyte-source/: catalog.json
catalog/hubspot/src/: morph-lock.toml
catalog/hubspot/transforms/: tickets_to_ticket.yml
catalog/iterable/: README.md  rejected-mappings.md
catalog/iterable/airbyte-interop-dbt-project/: dbt_project.yml
catalog/jira/: README.md  rejected-mappings.md
catalog/jira/airbyte-interop-dbt-project/: dbt_project.yml
catalog/klaviyo/: README.md  fivetran-interop.morph-lock.toml  rejected-mappings.md
catalog/klaviyo/airbyte-interop-dbt-project/: dbt_project.yml
catalog/marketo/: README.md  rejected-mappings.md
catalog/marketo/airbyte-interop-dbt-project/: dbt_project.yml
catalog/recharge/: README.md  rejected-mappings.md
catalog/recharge/airbyte-interop-dbt-project/: dbt_project.yml
catalog/recurly/: README.md  rejected-mappings.md
catalog/recurly/airbyte-interop-dbt-project/: dbt_project.yml
catalog/salesforce/: README.md  rejected-mappings.md
catalog/salesforce/airbyte-interop-dbt-project/: dbt_project.yml
catalog/shopify/: README.md  fivetran-interop.morph-lock.toml  rejected_mappings.md
catalog/tiktok_marketing/: README.md  fivetran-interop.morph-lock.toml  rejected-mappings.md
catalog/twilio/: README.md  rejected-mappings.md
catalog/twilio/airbyte-interop-dbt-project/: dbt_project.yml
docs/: CONTRIBUTING.md  SQL_DIALECT_CONFIG.md  USAGE.md  ai_driven_mapping_instructions.md  mapping_reference_chart.md
examples/: sample_data.csv  sample_data.json
kedro-ibis-poc/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
kedro-ibis-poc/conf/base/: catalog.yml  catalog_connections.yml  parameters.yml
kedro-ibis-poc/src/kedro_ibis_poc/: __init__.py  pipeline_registry.py  settings.py
kedro-ibis-poc/src/kedro_ibis_poc/pipelines/extract/: __init__.py  nodes.py  pipeline.py
kedro-ibis-poc/src/kedro_ibis_poc/pipelines/fact/: __init__.py  nodes.py  pipeline.py
kedro-ibis-poc/src/kedro_ibis_poc/pipelines/staging/: __init__.py  nodes.py  pipeline.py
morph/: __init__.py  __main__.py  cli.py  constants.py  models.py  resources.py  transform.py
morph/ai/: __init__.py  checks.py  eval.py  functions.py  map.py  models.py
morph/cli/: main.py
morph/tests/: test_cli.py  test_transform.py
morph/utils/: airbyte_catalog.py  airbyte_sync.py  dbt_build.py  dbt_source_files.py  docker_utils.py  file_utils.py  json_to_dbt_sources.py  lock_file.py  logic.py  mapping_to_dbt_models.py  markdown_utils.py  resource_paths.py  retries.py  rich_utils.py  text_utils.py  transform_scaffold.py
morph/utils/dbml/: README.md  dbml_generator.py  dbml_visualizer.py
morph/utils/dbt/: dbt_source_files.py  mapping_to_dbt_models.py
scripts/: README.md  build_hubspot_db.sh  create_hubspot_catalog.py  create_hubspot_data.py  generate_config_files.py  json_to_dbt_sources.py  run_generation.py
src/morph/: __init__.py  constants.py  models.py  resources.py
src/morph/ai/: eval.py  functions.py  map.py
src/morph/cli/: __init__.py  _main.py  main.py
src/morph/utils/: airbyte_catalog.py  dbt_build.py  docker_utils.py  lock_file.py  transform_scaffold.py
src/transforms/amplitude/: config.yml
src/transforms/asana/: config.yml
src/transforms/facebook_marketing/: config.yml
src/transforms/github/: config.yml
src/transforms/greenhouse/: config.yml
src/transforms/hubspot/: config.yml
src/transforms/intercom/: config.yml
src/transforms/iterable/: config.yml
src/transforms/jira/: config.yml
src/transforms/klaviyo/: config.yml
src/transforms/mailchimp/: config.yml
src/transforms/marketo/: config.yml
src/transforms/netsuite/: config.yml
src/transforms/outreach/: config.yml
src/transforms/pardot/: config.yml
src/transforms/pendo/: config.yml
src/transforms/pinterest/: config.yml
src/transforms/quickbooks/: config.yml
src/transforms/recharge/: config.yml
src/transforms/recurly/: config.yml
src/transforms/salesforce/: config.yml
src/transforms/shopify/: config.yml
src/transforms/stripe/: config.yml
templates/dbt_project_template/: copier.yml
test_generate/: test_file.txt
test_workflow/: test_generate.sh
tests/: __init__.py  conftest.py  test_cli.py  test_dbt_compile.py  test_hubspot_mappings.py  test_init.py  test_json_to_dbt.py  test_lock_file.py  test_subcolumns.py  test_table_mapping_audit.py
tests/utils/: test_mapping_to_dbt_models.py
(+447 files in other folders)
