[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "morph"
dynamic = ["version"]
description = "A Python library for data transformation"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Aaron Steers", email = "aaron.steers@airbyte.io"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "jinja2>=3.0.0",
    "copier>=9.6.0",
    "airbyte>=0.23.0",  # PyAirbyte
]

[project.optional-dependencies]
dev = [
    "airbyte>=0.23.0",
    "basedpyright>=1.28.2",
    "dbt-core>=1.9.3",
    "dbt-duckdb>=1.9.2",
    "poethepoet>=0.33.1",
    "pre-commit>=4.2.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "types-pyyaml>=6.0.12.20241230",
]

[project.urls]
Homepage = "https://github.com/airbytehq/morph"
Issues = "https://github.com/airbytehq/morph/issues"

[project.scripts]
morph = "morph.cli:main"

[tool.hatch.version]
source = "uv-dynamic-versioning"
